@@ -1,3 +1,11 @@
+2014-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mcs-e20.el (coding-system-to-mime-charset-exclude-regexp): New
+	variable.
+	(coding-system-to-mime-charset): Exclude non-standard charset from
+	result.
+	Cf. https://github.com/wanderlust/wanderlust/issues/61
+
 2014-05-27  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>
 
 	* mcs-e20.el (charsets-mime-charset-alist): Prefer iso-8859-15 to
